<resources>
    <string name="app_name">MobileAssigment</string>
    <string name="action_settings">Settings</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_map">Map</string>

    <string name="button_start">Start</string>
    <string name="button_end">End</string>

    <string name="button">Button</string>
    <string name="menu_item_1">All Photos</string>
    <string name="menu_item_2">My Routes</string>
    <string name="menu_item_3">Gallery</string>
    <string name="create_route_title">New Route</string>
    <string name="create_moment_title">New Moment</string>
    <string name="new_route_hint">Title...</string>
    <string name="create_button_text">Begin</string>
    <string name="menu_item_1_alt">Current Route</string>

    <string name="map_menu_1">Start</string>
    <string name="map_menu_2">Pause</string>
    <string name="map_menu_3">Create a Moment</string>
    <string name="map_menu_4">Finish Route</string>

    <string name="single_image_title">Route Title</string>
    <string name="single_image_date">Date Taken</string>

    <string name="popup_photo">Take a photo</string>
    <string name="popup_gallery">Choose From Gallery</string>

    <string name="pressure">Pressure:</string>
    <string name="temp">Temperature:</string>
    <string name="date">Date</string>
    <string name="title">Title</string>

</resources>
