<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team.macbook.mobileassigment.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/map_menu_2"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:onClick="disableUpdates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/map_menu_3"
        android:icon="@android:drawable/ic_menu_camera"
        android:onClick="openCreateMoment"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/map_menu_4"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:onClick="finishActivity"
        app:showAsAction="never" />
</menu>
