<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team.macbook.mobileassigment.MainActivity">
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/menu_item_2"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:onClick="switchViewHome"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/menu_item_3"
        android:icon="@android:drawable/ic_menu_compass"
        android:onClick="switchViewRouteGallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_item_1"
        android:icon="@android:drawable/ic_menu_gallery"
        android:onClick="switchViewGallery"
        app:showAsAction="never" />
</menu>
